# oop-to-rust

./: Cargo.toml  README.md
src/: chapter02_drop.rs  chapter02_lifetimes.rs  chapter03_enums.rs  chapter03_options.rs  chapter04_traits.rs  chapter06_errors.rs  chapter09_builder.rs  chapter09_factory.rs  chapter10_composite.rs  chapter10_decorator.rs  chapter11_command.rs  chapter11_state.rs  chapter11_strategy.rs  chapter13_cache.rs  chapter13_shared_state.rs  chapter14_actor.rs  chapter14_channels.rs  chapter14_pipeline.rs  chapter15_async_basics.rs  chapter16_cancellation.rs  chapter17_atomics.rs  chapter17_work_stealing.rs
